index.html criado, pasta CSS e arquivos referente ao header criados

--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bikcraft</title>
-  <link rel="shortcut icon" href="favicon.svg" type="">
+  <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-
+  <header>
+    <div class="header-container">
+      <img src="./img/bikcraft.svg" alt="bikcraft" srcset="">
+      <nav class="menu-nav">
+        <ul>
+          <li><a href="">Bicicletas</a></li>
+          <li><a href="">Seguros</a></li>
+          <li><a href="">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 </body>
 
 </html>
