--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Bikcraft</title>
   <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body>
@@ -22,6 +23,16 @@
       </nav>
     </div>
   </header>
+  <section class="introducao">
+    <div class="introducao-container">
+      <div class="introducao-texto">
+        <h1>Bicicletas feitas sob medida<span class="cor-destaque">.</span></h1>
+        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a href="#">selecione a sua</a>
+      </div>
+      <img src="./img/bicicleta/nimbus1.jpg" alt="">
+    </div>
+  </section>
 </body>
 
 </html>
