--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bikcraft</title>
-  <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="./css/style.css">
 
+  <title>Bikcraft - Bicicletas Elétricas</title>
+  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
-  <header>
-    <div class="header-container">
-      <img src="./img/bikcraft.svg" alt="bikcraft" srcset="">
-      <nav class="menu-nav">
-        <ul>
+  <header class="header-bg">
+    <div class="header">
+      <a href="./">
+        <img src="./img/bikcraft.svg" alt="Bikcraft" srcset="">
+      </a>
+      <nav aria-label="primaria">
+        <ul class="header-menu">
           <li><a href="">Bicicletas</a></li>
           <li><a href="">Seguros</a></li>
           <li><a href="">Contato</a></li>
@@ -23,16 +27,7 @@
       </nav>
     </div>
   </header>
-  <section class="introducao">
-    <div class="introducao-container">
-      <div class="introducao-texto">
-        <h1>Bicicletas feitas sob medida<span class="cor-destaque">.</span></h1>
-        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a href="#">selecione a sua</a>
-      </div>
-      <img src="./img/bicicleta/nimbus1.jpg" alt="">
-    </div>
-  </section>
+
 </body>
 
 </html>
